
buildscript {
    repositories {
        google()
        jcenter()
    }

    dependencies {
        classpath 'com.android.tools.build:gradle:4.0.2'
    }
}

apply plugin: 'com.android.application'
apply plugin: 'com.chaquo.python'


repositories {
    google()
    jcenter()
}

dependencies {

    implementation 'androidx.wear:wear:1.1.0'
    implementation 'androidx.recyclerview:recyclerview:1.1.0'
    implementation 'androidx.percentlayout:percentlayout:1.0.0'
    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
    implementation 'com.google.firebase:firebase-messaging:21.0.0'

    implementation 'com.google.gms:google-services:4.3.4'
    implementation 'com.google.android.gms:play-services-wearable:17.0.0'


    compileOnly 'com.google.android.wearable:wearable:2.8.1'

    implementation 'com.google.android.support:wearable:2.8.1'

    implementation 'androidx.legacy:legacy-support-v13:1.0.0'

    // SocketIO
    implementation 'com.github.nkzawa:socket.io-client:0.6.0'
    // Animation
    implementation 'com.kuassivi.android.view:ripple-pulse-layout:0.1.9'

    // Import tflite dependencies
    implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
    implementation 'org.tensorflow:tensorflow-lite-gpu:0.0.0-nightly'
    implementation 'org.tensorflow:tensorflow-lite-support:0.0.0-nightly'
}

// The sample build uses multiple directories to
// keep boilerplate and common code separate from
// the main sample code.
List<String> dirs = [
    'main',     // main sample code; look here for the interesting stuff.
    'common',   // components that are reused by multiple samples
    'template'] // boilerplate code that is generated by the sample template process

android {

    compileSdkVersion 29

    buildToolsVersion "29.0.2"

    defaultConfig {
        versionCode 9
        versionName "1.07"
        applicationId 'com.wearable.sound'
        minSdkVersion 28

        targetSdkVersion 29

        multiDexEnabled true

        python {
            // If Chaquopy fails to find Python on your build machine, enable the following
            // line and edit it to point to Python 3.4 or later.
            buildPython "/usr/bin/python3"
            pip {
                install "numpy==1.17.4"
            }
        }
        ndk {
            abiFilters 'armeabi-v7a', 'x86'
        }

    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    sourceSets {
        main {
            dirs.each { dir ->
                java.srcDirs "src/${dir}/java"
                res.srcDirs "src/${dir}/res"
            }
        }
        androidTest.setRoot('tests')
        androidTest.java.srcDirs = ['tests/src']

    }

    // Specify tflite file should not be compressed for the app apk
    aaptOptions {
        noCompress "tflite"
    }
    lintOptions {
        abortOnError false
    }
}
